@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.21 2021/12/24 15:50:45 wiz Exp $
+# $NetBSD: Makefile.common,v 1.22 2021/12/24 15:55:03 wiz Exp $
 
 # used by databases/py-trytond-ldap-authentication
 # used by devel/py-proteus/Makefile
@@ -103,7 +103,6 @@
 # used by security/py-trytond-authentication-sms/Makefile
 # used by time/py-trytond-calendar-classification/Makefile
 # used by time/py-trytond-calendar-scheduling/Makefile
-# used by time/py-trytond-calendar-todo/Makefile
 # used by time/py-trytond-calendar/Makefile
 # used by time/py-trytond-company-work-time/Makefile
 # used by time/py-trytond-timesheet-cost/Makefile
@@ -168,7 +167,6 @@ MODULE_REVISION.trytond_bank=					0
 MODULE_REVISION.trytond_calendar=				1
 MODULE_REVISION.trytond_calendar_classification=		0
 MODULE_REVISION.trytond_calendar_scheduling=			0
-MODULE_REVISION.trytond_calendar_todo=				0
 MODULE_REVISION.trytond_carrier=				0
 MODULE_REVISION.trytond_carrier_percentage=			0
 MODULE_REVISION.trytond_carrier_weight=				0
