@@ -1,1 +1,0 @@
-The calendar_todo module of the Tryton application platform.
