@@ -1,26 +1,0 @@
-# $NetBSD: Makefile,v 1.6 2021/12/22 22:54:56 mef Exp $
-TRYTON_MODULE_NAME=	trytond_calendar_todo
-.include "../../devel/py-trytond/Makefile.common"
-CATEGORIES=	python time
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://www.tryton.org/
-COMMENT=	Calendar TODO module of Tryton's application platform
-LICENSE=	gnu-gpl-v3
-
-DEPENDS+=	${PYPKGPREFIX}-dateutil-[0-9]*:../../time/py-dateutil
-DEPENDS+=	${PYPKGPREFIX}-vobject>=0.8.0:../../textproc/py-vobject
-#EPENDS+=	${PYPKGPREFIX}-pywebdav>=0.9.8:../../www/py-pywebdav
-DEPENDS+=	${PYPKGPREFIX}-pytz-[0-9]*:../../time/py-pytz
-DEPENDS+=	${PYPKGPREFIX}-python-sql-[0-9]*:../../databases/py-python-sql
-DEPENDS+=	${PYPKGPREFIX}-trytond-calendar>=${TRYTON_BASEVER}:../../time/py-trytond-calendar
-#EPENDS+=	${PYPKGPREFIX}-trytond-webdav>=${TRYTON_BASEVER}:../../www/py-trytond-webdav
-DEPENDS+=	${PYPKGPREFIX}-trytond>=${TRYTON_BASEVER}:../../devel/py-trytond
-
-USE_LANGUAGES=	# none
-
-#YTHON_VERSIONS_ACCEPTED=	27 # py-pywebdav
-
-.include "../../lang/python/application.mk"
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
