@@ -1,59 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2016/12/04 21:13:09 rodent Exp $
-${PYSITELIB}/trytond/modules/calendar_todo/__init__.py
-${PYSITELIB}/trytond/modules/calendar_todo/__init__.pyc
-${PYSITELIB}/trytond/modules/calendar_todo/__init__.pyo
-${PYSITELIB}/trytond/modules/calendar_todo/caldav.py
-${PYSITELIB}/trytond/modules/calendar_todo/caldav.pyc
-${PYSITELIB}/trytond/modules/calendar_todo/caldav.pyo
-${PYSITELIB}/trytond/modules/calendar_todo/locale/bg.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/ca.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/cs.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/de.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/es.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/es_419.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/fr.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/hu_HU.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/it_IT.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/ja_JP.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/lo.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/lt.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/nl.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/pl.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/pt_BR.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/ru.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/sl.po
-${PYSITELIB}/trytond/modules/calendar_todo/locale/zh_CN.po
-${PYSITELIB}/trytond/modules/calendar_todo/tests/__init__.py
-${PYSITELIB}/trytond/modules/calendar_todo/tests/__init__.pyc
-${PYSITELIB}/trytond/modules/calendar_todo/tests/__init__.pyo
-${PYSITELIB}/trytond/modules/calendar_todo/tests/test_calendar_todo.py
-${PYSITELIB}/trytond/modules/calendar_todo/tests/test_calendar_todo.pyc
-${PYSITELIB}/trytond/modules/calendar_todo/tests/test_calendar_todo.pyo
-${PYSITELIB}/trytond/modules/calendar_todo/todo.py
-${PYSITELIB}/trytond/modules/calendar_todo/todo.pyc
-${PYSITELIB}/trytond/modules/calendar_todo/todo.pyo
-${PYSITELIB}/trytond/modules/calendar_todo/todo.xml
-${PYSITELIB}/trytond/modules/calendar_todo/tryton.cfg
-${PYSITELIB}/trytond/modules/calendar_todo/view/attendee_form.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/attendee_tree.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/exdate_form.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/exdate_tree.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/exrule_form.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/exrule_tree.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/rdate_form.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/rdate_tree.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/rrule_form.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/rrule_tree.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/todo_form.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/todo_tree.xml
-${PYSITELIB}/trytond/modules/calendar_todo/view/todo_tree_occurence.xml
-${PYSITELIB}/trytond/modules/calendar_todo/webdav.py
-${PYSITELIB}/trytond/modules/calendar_todo/webdav.pyc
-${PYSITELIB}/trytond/modules/calendar_todo/webdav.pyo
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
